--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <img src="assets/img/about.png" class="img-fluid" alt="">
                     </div>
                     <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
-                        <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+                        <h3>On emir.</h3>
                         <p class="fst-italic">
                             On Emir (İbranice: עֲשֶׂרֶת הַדִּבְּרוֹת, romanize: Aseret ha-Dibrot) veya Dekalogos[1], Yahudiliğe göre Sina Dağı'nda Musa'ya vahyedilmiş, ve YHVH'nin İsrailoğulları'na emrettiği on tane emiri içeren bir ilkeler dizisidir.[2] Çıkış 20:2–17 ve Tesniye 5:6–21 olmak üzere Tanah'ın iki kitabında On Emir metni yer alır.
                         </p>
