--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <i class="bi bi-phone-fill phone-icon"></i> +90 530 634 84 42
             </div>
             <div class="social-links d-none d-md-block">
-                <a href="https://www.facebook.com/search/top?q=beykoz%20poker" class="facebook"><i class="bi bi-facebook"></i></a>
+                <a href="https://www.facebook.com/Beykoz-poker-136600438554595" class="facebook"><i class="bi bi-facebook"></i></a>
                 <a href="https://www.instagram.com/beykozpokerofficial" class="instagram"><i class="bi bi-instagram"></i></a>
                 <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
             </div>
@@ -659,7 +659,7 @@
                                 <strong>Email:</strong> beykozpoker@gmail.com<br>
                             </p>
                             <div class="social-links mt-3">
-                                <a href="https://www.facebook.com/search/top?q=beykoz%20poker" class="facebook"><i class="bx bxl-facebook"></i></a>
+                                <a href="https://www.facebook.com/Beykoz-poker-136600438554595" class="facebook"><i class="bx bxl-facebook"></i></a>
                                 <a href="https://www.instagram.com/beykozpokerofficial" class="instagram"><i class="bx bxl-instagram"></i></a>
                                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
                                 <!--
