--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <section id="hero" class="d-flex align-items-center">
         <div class="container position-relative" data-aos="fade-up" data-aos-delay="500">
             <h1>Beykoz Poker</h1>
-            <h2>more exciting more aggressive more risky. play now with people all aroound the world</h2>
+            <h2>more exciting more aggressive more risky. play now with people all araund the world</h2>
             <!--<a href="#about" class="btn-get-started scrollto">Get Started</a>-->
             <a href="https://www.instagram.com/beykozpokerofficial" class="btn-get-started scrollto"><i class="bx bxl-play-store"></i> Google Play</a>
             <a href="https://www.instagram.com/beykozpokerofficial" class="btn-get-started scrollto"><i class="bx bxl-apple"></i> App Store</a>
