--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <ul>
                     <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
                     <li><a class="nav-link scrollto" href="#about">About</a></li>
-                    <li><a class="nav-link scrollto" href="#services">rules</a></li>
+                    <li><a class="nav-link scrollto" href="#rules">Rules</a></li>
 
                     <!--
                     <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
@@ -120,69 +120,120 @@
                         <img src="assets/img/about.png" class="img-fluid" alt="">
                     </div>
                     <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
-                        <h3>On emir.</h3>
+                        <br>
+                        <br>
+                        <h3>About Beykoz Poker</h3>
+                        <br>
                         <p class="fst-italic">
-                            On Emir (İbranice: עֲשֶׂרֶת הַדִּבְּרוֹת, romanize: Aseret ha-Dibrot) veya Dekalogos[1], Yahudiliğe göre Sina Dağı'nda Musa'ya vahyedilmiş, ve YHVH'nin İsrailoğulları'na emrettiği on tane emiri içeren bir ilkeler dizisidir.[2] Çıkış 20:2–17 ve Tesniye 5:6–21 olmak üzere Tanah'ın iki kitabında On Emir metni yer alır.
+                            Şans, sabır ve taktiğe dayalı bir kart oyunu olan pokerin bir çok oyun çeşidi bulunuyor. Bunlardan en yeni çeşidiyse Beykoz Poker‘dir.
+                            Genel olarak pokerin her oyununda olduğu gibi Beykoz Poker oyununda da en iyi beşliyi sıralamak esastır.
+                            Her bir oyuncu için oyunun temel amacı dağıtılan 3 kartla yerdeki kartları tamamlayıp en iyi 5’liyi türetmek ve rakipin ya da rakiplerin çiplerini toplamaktır.
+                            Beykoz pokerin en önemli özelliği kart sırasında oyuncuların her bir kart için bir defa değiştirme seçeneğine sahip olmasıdır. Oyuncular eldeki 3 kartın her biri
+                            Dağıtılırken eline gelen kağıdı beğenmezse destedeki bir sonraki kartla değiştirebilir. Bu özellik bahis artırmanın dışında bir blöf yöntemi olabildiği gibi rakibin
+                            kart değiştirip değiştirmeme durumuna göre analiz etme elini tahmin etme şansı vererek oyunu daha zevkli heyecanlı ve zor bir hale getirir. Öngörülerinize hiç bukadar ihtiyacınız olmamıştı.
                         </p>
-                        <ul>
-                            <li><i class="bi bi-check-circle"></i> 1. madde</li>
-                            <li><i class="bi bi-check-circle"></i> 2. madde</li>
-                            <li><i class="bi bi-check-circle"></i> 3. madde</li>
-                        </ul>
-                        <p>
-                            Kutsal kitapta da yer alan (Kutsal Kitap, 2004; 261) bir Yahudi inancına göre Tevrat’ın ilk beş kitabı Musa’ya vahyedilen, on emir ise iki levha (taş tablet) olarak Yahova’nın kendi parmakları ile yazarak Musa’ya verdiği bir kitabe idi.[3]
-                            Akademisyenler, On Emir'in hangi dönem aralığında ve kimin tarafından yazıldığı konusunda ortak bir görüşe sahip değildir. Modern Tarih bilimcileri On Emir'in, muhtemelen Hitit veya Mezopotamya yasalarının üzerine modellendiğini öne sürüyor..
-                        </p>
+                        <!--
+        <ul>
+        <li><i class="bi bi-check-circle"></i> 1. madde</li>
+        <li><i class="bi bi-check-circle"></i> 2. madde</li>
+        <li><i class="bi bi-check-circle"></i> 3. madde</li>
+    </ul>
+    <p>
+        Kutsal kitapta da yer alan (Kutsal Kitap, 2004; 261) bir Yahudi inancına göre Tevrat’ın ilk beş kitabı Musa’ya vahyedilen, on emir ise iki levha (taş tablet) olarak Yahova’nın kendi parmakları ile yazarak Musa’ya verdiği bir kitabe idi.[3]
+        Akademisyenler, On Emir'in hangi dönem aralığında ve kimin tarafından yazıldığı konusunda ortak bir görüşe sahip değildir. Modern Tarih bilimcileri On Emir'in, muhtemelen Hitit veya Mezopotamya yasalarının üzerine modellendiğini öne sürüyor..
+    </p>
+    -->
+
                     </div>
                 </div>
 
             </div>
         </section><!-- End About Section -->
         <!-- ======= Why Us Section ======= -->
-        <section id="why-us" class="why-us">
+        <section id="rules" class="rules">
             <div class="container">
 
                 <div class="row">
+                    <div class="col-lg-0" data-aos="fade-up">
+                        <h4>Nasıl Oynanır</h4>
+                        <br>
+                        <p class="fst-italic">
+                            İlk iki oyuncunun kör bahis adı verilen bahis miktarını masaya koymasıyla oyun başlar. ilk oyuncu için masanın minumum bahis miktarının yarısı, ikinci oyuncu için tamamıdır.
+                            Kör bahislerin ardından kart dağıtımına geçilir. Başka çeşitlerinden beykoz pokeri ayıran en büyük özellik bu kısımdadır. Kartları dağıtan kurpiyer, kör bahis yapmış oyuncuların solundan başlayarak her oyuncuya sırayla birer kart verir. Oyuncular ilk gelen kartı alır ve ya geri verip bir sonrakiyle değiştirir. bu işlem iki tur yapılır ve her oyuncunun elinde iki kart olur.
+                            Oyuncular ilk iki kartlarını aldıktan sonra kör bahis yapan oyuncuların solunda ki oyuncuyla birlikte bahisler yapılmaya başlanır. Oyuna devam etmek isteyen her oyuncu, masada kendinden önceki oyuncuların yapmış olduğu en yüksek bahis miktarı kadar chip koyar veya oyundan çekilirler. Eğer oyuncunun yeteri kadar fişi yoksa rest der ve bu şekilde elindeki bütün fişleri bahise koymuş olur. Arttırılan miktarın bir kısmını görebilmiş olan bu oyuncu, masadaki her bir kişiden kendi koyduğu miktar kadar kazanabilir, daha fazlasını alamaz.
+                            İlk bahis turunun bitiminden sonra kurpiyer masaya 3 kart açar. Bir tur daha bahisler alınır.
+                            Minimum bahis miktarı, büyük kör bahis kadardır.
+                            Bir sonraki turda kurpiyer oyunculara bir kart daha dağıtır. ilk turdaki gibi oyuncular gelen kartı alabilir ya da bir sonrakiyle değiştirebilir.
+                            Bir sonraki turda tek kart açılır. Bu 4. tura "turn" denir.
+                            Ardından tekrar bahisler alınır.
+                            Bir kart daha masaya açılır. Son kez bahisler alınır.
+                        </p>
+                        <br>
+                        <p class="fst-italic">
+                            El Üstünlük Sıralaması şu şekildedir.<br>
+                            Royal Flush / Floş Royal: Floşun, astan başlayan sıralı şeklidir. Pokerde oluşturulabilecek en güçlü eldir.<br>
 
-                    <div class="col-lg-4" data-aos="fade-up">
-                        <div class="box">
-                            <span>01</span>
-                            <h4>Tanrı YHVH'ten başka ilah(lar)ın olmayacak.</h4>
-                            <p>Kendine yukarıda, gökte; aşağıda, yerde; veya derinlerde, yeraltında yaşayan put(lar) yapmayacaksın; onlara eğilmeyeceksin ve onlara ibadet etmeyeceksin.</p>
-                        </div>
+                            Straight Flush / Sıralı Floş: Elde aynı gruptan sıralı beş kart bulunması durumudur.<br>
+
+                            Four of a Kind / Kare: Elde aynı değerde dört kart olması durumudur.<br>
+
+                            Full House / Ful: Elde bir per ve bir üçlü olması durumudur.<br>
+
+                            Flush / Renk: Elde aynı gruptan sırasız beş kartın bulunması durumudur.<br>
+
+                            Straight / Kent: Elde (Grupları farklı.) değer bakımından sıralı beş kart bulunması durumudur.<br>
+
+                            Three of a Kind / Üçlü: Elde aynı değerde üç kartın bulunması durumudur.<br>
+
+                            Two Pairs / Dö per: Elde çift per bulunması durumudur.<br>
+
+                            One Pair / Per: Elde aynı değere sahip iki kart bulunması durumudur.<br>
+
+                            High Card / Yüksek Kart: Eller arasında hiçbirinin bir seri yakalayamaması ya da iki oyuncunun ellerinin aynı olması durumunda, eldeki en yüksek karta bakılır.<br>
+                        </p>
                     </div>
 
-                    <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="150">
-                        <div class="box">
-                            <span>02</span>
-                            <h4>Tanrın YHVH'in ismini boş yere anmayacaksın.</h4>
-                            <p>Haftanın altı günü çalışacak ve dünyevi işlerini yapacaksın; haftanın son günü, yedinci gün mukaddes Şabat günündeyse bütün işlerini bırakacak ve Tanrın YHVH'e ibadet edeceksin. O gün, Sebt'tir.</p>
-                        </div>
-                    </div>
 
-                    <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
-                        <div class="box">
-                            <span>03</span>
-                            <h4> Annene ve babana hürmet edeceksin.</h4>
-                            <p>Öldürmeyeceksin</p>
-                        </div>
-                    </div>
+                    <!--
+        <div class="col-lg-4" data-aos="fade-up">
+            <div class="box">
+                <span>01</span>
+                <h4>Tanrı YHVH'ten başka ilah(lar)ın olmayacak.</h4>
+                <p>Kendine yukarıda, gökte; aşağıda, yerde; veya derinlerde, yeraltında yaşayan put(lar) yapmayacaksın; onlara eğilmeyeceksin ve onlara ibadet etmeyeceksin.</p>
+            </div>
+        </div>
+        <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="150">
+            <div class="box">
+                <span>02</span>
+                <h4>Tanrın YHVH'in ismini boş yere anmayacaksın.</h4>
+                <p>Haftanın altı günü çalışacak ve dünyevi işlerini yapacaksın; haftanın son günü, yedinci gün mukaddes Şabat günündeyse bütün işlerini bırakacak ve Tanrın YHVH'e ibadet edeceksin. O gün, Sebt'tir.</p>
+            </div>
+        </div>
 
-                    <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="150">
-                        <div class="box">
-                            <span>04</span>
-                            <h4>Zina etmeyeceksin.</h4>
-                            <p>Çalmayacaksın.</p>
-                        </div>
-                    </div>
+        <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
+            <div class="box">
+                <span>03</span>
+                <h4> Annene ve babana hürmet edeceksin.</h4>
+                <p>Öldürmeyeceksin</p>
+            </div>
+        </div>
 
-                    <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
-                        <div class="box">
-                            <span>05</span>
-                            <h4> Komşu(ları)na karşı yalan yere şahitlik yapmayacaksın.</h4>
-                            <p>Komşu(ları)nın, yakın(lar)ının mülklerine tamah etmeyeceksin.</p>
-                        </div>
-                    </div>
+        <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="150">
+            <div class="box">
+                <span>04</span>
+                <h4>Zina etmeyeceksin.</h4>
+                <p>Çalmayacaksın.</p>
+            </div>
+        </div>
+
+        <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
+            <div class="box">
+                <span>05</span>
+                <h4> Komşu(ları)na karşı yalan yere şahitlik yapmayacaksın.</h4>
+                <p>Komşu(ları)nın, yakın(lar)ının mülklerine tamah etmeyeceksin.</p>
+            </div>
+        </div>
+    -->
 
                 </div>
 
